--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altair==5.5.0
 anyio==4.9.0
 argon2-cffi==25.1.0
 argon2-cffi-bindings==21.2.0
@@ -8,9 +9,12 @@ attrs==25.3.0
 babel==2.17.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
+blinker==1.9.0
+cachetools==6.2.1
 certifi==2025.7.9
 cffi==1.17.1
 charset-normalizer==3.4.2
+click==8.3.0
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.2
@@ -22,6 +26,7 @@ defusedxml==0.7.1
 executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.13.1
+finance-datareader==0.9.96
 fonttools==4.58.5
 fqdn==1.5.1
 frozendict==2.4.6
@@ -87,7 +92,9 @@ protobuf==6.33.0
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==21.0.0
 pycparser==2.22
+pydeck==0.9.1
 Pygments==2.19.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
@@ -97,6 +104,7 @@ PyYAML==6.0.2
 pyzmq==27.0.0
 referencing==0.36.2
 requests==2.32.4
+requests-file==3.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.26.0
@@ -110,22 +118,26 @@ smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.7
 stack-data==0.6.3
+streamlit==1.50.0
 sympy==1.13.3
+tenacity==9.1.2
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
+toml==0.10.2
 torch==2.7.1+cpu
 tornado==6.5.1
+tqdm==4.67.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20250708
 typing_extensions==4.14.1
 tzdata==2025.2
 uri-template==1.3.0
 urllib3==2.5.0
+watchdog==6.0.0
 wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 websockets==15.0.1
 yfinance==0.2.66
-finance-datareader==0.9.96
